argo-cd/sample-fullstack-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-fullstack-app
  namespace: pet-project
spec:
  selector:
    matchLabels:
      app: sample-fullstack-app
  template:
    metadata:
      labels:
        app: sample-fullstack-app
    spec:
      containers:
        - name: sample-fullstack-app
          image: logicalogbonna/node-sample-application:main
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5551
image:
  tag: e292e81d4a6392d872f09f73db5c7beef4791602
---
apiVersion: v1
kind: Service
metadata:
  name: sample-fullstack-app-service
spec:
  selector:
    app: sample-fullstack-app
  ports:
    - port: 80
      targetPort: 5551
# image:
#   tag: e292e81d4a6392d872f09f73db5c7beef4791602
