argo-cd/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-fullstack-ingress
  namespace: pet-project
  labels:
    name: sample-fullstack-ingress
spec:
  rules:
  - host: ashton.tk
    http:
      paths:
      - path: "/"
        backend:
          service:
            name: sample-fullstack-app-service
            port: 
              number: 80
  - host: cd.ashton.tk
    http:
      paths:
      - path: "/"
        backend:
          service:
            name: argocd-server
            port: 
              number: 80
